# jira-report-to-gsheet

./: MAINTAINERS  README.md  requirements.txt  setup.cfg
config/: example1.json
jira_report/: google_sheet.py  jira_issue.py  jira_manager.py  jira_report.py  report_config.py
tests/: test_jira_config.py  test_report_config.py
