[metadata]
name = jira_report_to_gsheet
version = 0.1
description = Generate jira report and export them to Google Docs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mclemenceau/jira_report_to_gsheet
project_urls =
    Bug Reports = https://github.com/mclemenceau/jira_report_to_gsheet
    Source Code = https://github.com/mclemenceau/jira_report_to_gsheet
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    jira
    gspread

[options.extras_require]
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    jira-report-to-gsheet = jira_report.jira_report:main

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source = jira_report
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False
